@startuml
interface Prototype {
    + clone() : Prototype
    + executar() : void
}

class ConcretePrototypeA implements Prototype {
    - atributo : String
}

class ConcretePrototypeB implements Prototype {
    - valor : int
}

Prototype <|-- ConcretePrototypeA
Prototype <|-- ConcretePrototypeB
@enduml